syntax="proto3";

service LonghornLauncherService {
	rpc UpgradeEngine(Engine) returns (Empty) {}
	rpc GetInfo(Empty) returns (Info) {}
	rpc StartFrontend(Empty) returns (Empty) {}
	rpc ShutdownFrontend(Empty) returns (Empty) {}
}

message Engine {
	string binary = 1;
	repeated string replicas = 2;
}

message Info {
	string volume = 1;
	string frontend = 2;
	string endpoint = 3;
}

message Empty {
}
